# ai-fde-collection-assistant

./: .env.example  .gitignore  REQUIREMENTS.md  newrelic.ini  pyproject.toml  render.yaml  requirements.txt  server.log.err  server_api.log.err  server_ui.log.err
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: collection_assistant.db
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: devops_strategy.md  llm_provider_strategy.md  mcp_rag_strategy.md  observability_strategy.md  sre_strategy.md  usecase.md
docs/usecases/: README.md  usecase-001.md  usecase-002.md  usecase-003.md  usecase-004.md  usecase-005.md  usecase-006.md  usecase-007.md  usecase-008.md  usecase-009.md  usecase-010.md  usecase-011.md  usecase-012.md  usecase-013.md  usecase-014.md  usecase-015.md
scripts/: reset_db.py  seed_db.py
src/collection_assistant/: __init__.py  config.py  event_bus.py  exceptions.py
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_account_profile_agent.py  test_arrears_prediction_agent.py  test_arrears_tools.py  test_audit_agent.py  test_customer_profile_agent.py  test_dispute_agent.py  test_nba_agent.py  test_nba_tools.py  test_quick_scenarios.py  test_seed_db.py
ui/: app.py  sse_client.py  styles.css
ui/components/: account_card.py  arrears_card.py  audit_panel.py  customer_card.py  customer_profile_page.py  dashboard.py  dispute_card.py  execution_panel.py  nba_card.py
ui/previews/: preview_01_input.html  preview_02_execution.html  preview_03_results.html  preview_04_dashboard.html  (+1 more)
(+36 files in other folders)
